<resources>
    <string name="app_name">Harcamanı Takip Et</string>
    <string name="harcamani_takip_et">Harcamamanı Takip et</string>
    <string name="karsinizda_harcamani_takip_et">Karşınızda Harcamamanı Takip Et</string>
    <string name="karisikliga_son">Artık Karışıklığa Son!</string>
    <string name="kolayca_kategorilendir">Kolayca Kategorilendir</string>
    <string name="second_screen_second_text">Harcamalarınızı kategorileyerek daha kolay takip edin!</string>
    <string name="farkli_para_birimleri">Farklı Para Birimleriyle Takip Et</string>
    <string name="harcamalar_text_third_fragment">Harcamalarınızı; TL, Dolar, Euro, Sterlin para birimleriyle ve sürekli güncellenen kurla takip edin!</string>
    <string name="gec">GEÇ</string>
    <string name="bitir">BİTİR</string>
    <string name="merhaba">Merhaba</string>
    <string name="harcamaniz">Harcamanız</string>
    <string name="fatura">Fatura</string>
    <string name="kira">Kira</string>
    <string name="diger">Diğer</string>
    <string name="ornek_price">20 $</string>
    <string name="sil">Sil</string>
    <string name="euro">Euro</string>
    <string name="dolar">Dolar</string>
    <string name="sterlin">STERLIN</string>
    <string name="sterlin_kucuk">Sterlin</string>
    <string name="tl">TL</string>
    <string name="ornek_para">40 TL</string>
    <string name="ornek_isim">Yiğit Bey</string>
    <string name="ornek_su">Su</string>
    <string name="ornek_300_tl">300 TL</string>
    <string name="add_new_item">Add New Item</string>
    <string name="ekle">Ekle</string>
    <string name="isminizi_giriniz">İsminizi Giriniz</string>
    <string name="erkek">Erkek</string>
    <string name="kadin">Kadın</string>
    <string name="belirtmek_istemiyorum">Belirtmek İstemiyorum</string>
    <string name="kaydet">Kaydet</string>
    <string name="isim_degistir">İsim Değiştir</string>
    <string name="harcama_ekle">Harcama Ekle</string>
    <string name="aciklama">Açıklama</string>
    <string name="harcama_tutari">Harcama Tutarı</string>
    <string name="harcama_resim">harcama resim</string>
    <string name="resim_aciklama">resim aciklama</string>
</resources>